compiler/e2e/test/snapshot/term/implements_qualified_identifier/not_accessible_trait/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: the symbol is not accessible
  ╭─ compiler/e2e/test/snapshot/term/implements_qualified_identifier/not_accessible_trait/main.pnx:9:19
  │
9 │ implements inner::InAccessible[int32]:
  │                   ^^^^^^^^^^^^ the symbol `main::inner::InAccessible` is not accessible from `main::[implements inner::InAccessible[int32]]`

error: Compilation aborted due to 1 error(s)



stdout:
